[build-system]
requires = [
    "setuptools",  # needed pre-install
    "wheel",
    "numpy",  # needed pre-install
    "setuptools_scm>=9.0.3",  # due to https://github.com/pypa/setuptools-scm/issues/938
    "beartype"  # required due to sctoolbox/_settings.py -> "import beartype"
]
build-backend = "setuptools.build_meta"

[project]
name = "SC-Framework"
dynamic = ["version"]
description = 'Custom modules for single cell analysis'
requires-python = ">=3.9,<3.13"  # dict type hints as we use it require python 3.9; 3.13 not supported by cmake # https://github.com/python-cmake-buildsystem/python-cmake-buildsystem/issues/350
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Hendrik Schultheis" },
    { name = "Jan Detleffsen" },
    { name = "René Wiegandt" },
    { name = "Mette Bentsen" },
    { name = "Yousef Alayoubi" },
    { name = "Guilherme Valente" },
    { name = "Micha Frederick Keßler" },
    { name = "Brenton Joey Bruns" },
    { name = "Dlnija Mirza" },
    { name = "Angeline Usanayo" },
    { name = "Jasmin Walter" },
    { name = "Philipp Goymann" },
    { name = "Moritz Hobein" },
    { name = "Carsten Kuenne" },
    { name = "Mario Looso" }
]
maintainers = [
    { name = "Hendrik Schultheis", email="Hendrik.Schultheis@mpi-bn.mpg.de" },
    { name = "Jan Detleffsen", email="Jan.Detleffsen@mpi-bn.mpg.de" },
    { name = "René Wiegandt", email="Rene.Wiegandt@mpi-bn.mpg.de" }
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
keywords = [
    "single-cell",
    "single-cell analysis",
    "scRNA-seq",
    "scATAC-seq",
    "transcriptomics",
    "epigenomics",
    "chromatin accessibility",
    "gene expression",
    "peak calling",
    "dimensionality reduction",
    "clustering",
    "cell type annotation",
    "differential expression",
    "trajectory",
    "pseudotime",
    "QC",
    "quality control",
    "normalization",
    "integration",
    "batch correction",
    "pipeline",
    "workflow",
    "reproducible research",
    "Jupyter notebooks",
    "analysis notebooks",
    "Scanpy",
    "AnnData",
    "visualization",
]
dependencies = [
        'pysam',
        'matplotlib',
        'matplotlib_venn',
        'scanpy[leiden]>=1.11',  # 'colorbar_loc' not available before 1.9; fix run_rank_genes error 1.11; also install community detection (leiden)
        'anndata>=0.8',  # anndata 0.7 is not upward compatible
        'numba>=0.57.1',  # minimum version supporting python>=3.10, but 0.57 fails with "cannot import name 'quicksort' from 'numba.misc'" for scrublet
        'numpy>=2',
        'kneed',
        'qnorm',
        'plotly',
        'scipy>=1.14',
        'statsmodels>=0.14.5',
        'tqdm',
        'pandas>1.5.3',  # https://gitlab.gwdg.de/loosolab/software/sc_framework/-/issues/200
        'seaborn>0.12',
        'ipywidgets>=8.0.0',  # needed to show labels in interactive accordion widgets
        'scrublet',
        'IPython',
        'ipympl',
        'apybiomart',
        'requests',
        'python-gitlab',
        'psutil',
        'deprecation',
        'pyyaml',
        'beartype>=0.18.2',  # Version 0.18.0 is not working properly
        'packaging',
        'throttler',
        'upsetplot',
        'pptreport>=1.1.4',  # to fix placeholder not found error
        'boto3',
        'Jinja2',
        'scikit-image',
        'PyGithub',
]

[project.optional-dependencies]
converter = [
    "rpy2",
    "anndata2ri"
    ]
atac = [
    'uropa',
    'pybedtools>=0.9.1',  # https://github.com/daler/pybedtools/issues/384
    'pygenometracks>=3.8',
    'peakqc',
    'tobias>=0.17.2',  # to avoid installation error
    'pyranges'
]
interactive = [
    'click'
]
batch_correction = [
    'bbknn',
    'harmonypy<=0.0.10',  # latest scanpy version is incompatible with newest harmonypy version: https://github.com/scverse/scanpy/issues/3940
    'scanorama'
]
receptor_ligand = [
    'pycirclize>=1.7.1',
    'liana',
    'networkx>=3.5'
]
pseudotime = [
    'scFates>=1.2.4'  # https://github.com/LouisFaure/scFates/issues/54; https://github.com/LouisFaure/scFates/issues/58
]
gsea = [
    'gseapy>=1.2.1'  # https://github.com/zqfang/GSEApy/issues/353
]
deseq2 = [
    'pydeseq2>=0.5.2'  # https://github.com/owkin/PyDESeq2/issues/242
]
annotation = [
    'markerRepo>=0.1.5'
]
proportion = [
    'scanpro>=0.4.1'  # scanpro < 0.3.1 needs statannotations which causes versioning issues
]
velocity = [
    'scvelo>=0.3.4'
]
palantir = [
    'palantir>=1.4.4'  # to speed up installation
]
#scar = [
#    'scar @ git+https://github.com/Novartis/scar.git'  # PyPI doesn't accept git packages
#]
pilot = [
#   'pilotpy @ git+https://github.com/loosolab/PILOT_scframework.git',  # PyPI doesn't accept git packages
    'palantir>=1.4.4'
]
# core and downstream are intended to install commonly used dependencies
# e.g. scar is deliberately skipped to to save disk space
core = [
    'SC-Framework[converter,atac,interactive,batch_correction]'
]
downstream = [
    'SC-Framework[receptor_ligand,pseudotime,gsea,deseq2,annotation,proportion,velocity,palantir,pilot]'
]
# all is intended to install everything
all = [
    'SC-Framework[core,downstream]'
]

[dependency-groups]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-html"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-exec-code",
    "nbsphinx",
    "nbsphinx_link",
    "myst-parser",
    "docutils<=0.21",  # pinned until https://github.com/vidartf/nbsphinx-link/issues/25 is fixed
    "sphinxcontrib-youtube"
]

[project.scripts]
SCF-analysis-setup = "sctoolbox.utils.cli:main"

[project.urls]
Repository = "https://github.com/loosolab/SC-Framework"
Documentation = "https://loosolab.pages.gwdg.de/software/sc_framework/"
Issues = "https://github.com/loosolab/SC-Framework/issues"
Changelog = "https://github.com/loosolab/SC-Framework/blob/main/CHANGES.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sctoolbox.__version__"}

[tool.setuptools.package-data]
sctoolbox = ["src/data/**/*"]

[tool.pytest.ini_options]
# durations=0 shows the ranked duration of all tests for improving compute time
addopts = """
--cov-report=term \
--cov=sctoolbox \
--junitxml=pytest.xml \
--cov-report=html:htmlcov \
--html=pytest.html \
--durations=0
"""
testpaths = [
    "./tests"
]

[tool.ruff]
# Include these directories and files
include = [
    "pyproject.toml",
    "src/**/*.py",
    "scripts/*.py",
    "tests/**/*.py",
    "tests/*.py",
    "*_analysis/notebooks/*.ipynb",
    "general_notebooks/*.ipynb"
]

# Exclude directories from linting
extend-exclude = [
    "src/sctoolbox/__init__.py",
    "src/sctoolbox/data",
    "src/tests/data",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "D",      # pydocstyle (docstring rules)
    "C90",    # mccabe complexity
    "ANN"     # flake8-annotations
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long
    "D202",  # No blank lines allowed after function docstring
    "F821"  # Undefined name
    # Note: W503 doesn't exist in ruff - line break style handled by formatters
    # Note: DOC301, DOC105 don't exist in ruff yet - not implemented from pydoclint
]

# Preview rules for pydoclint support and E226
preview = true
extend-select = [
    "DOC",  # pydoclint rules
    "E226",  # Missing whitespace around arithmetic operator (preview rule)
    "D417"  # check if docstring parameters match function signature
]

[tool.ruff.lint.pydocstyle]
# Use NumPy docstring convention
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore rules in specific files
"__init__.py" = [
    "F822",  # allows undefined strings in __all__
    "DOC201",  # `return` is not documented in docstring
    "DOC501"  #  Raised exception `xyz` missing from docstring
]
"tests/*" = [
    "ANN"  # disable the flake8-annotation rules
]

[tool.codespell]
# Skip specific directories and file patterns
# Use commas for multiple entries; globs are supported
skip = './src/sctoolbox/data,./atac_analysis/notebooks/test_data,./tests/data,.cache'

# Comma-separated list of words to ignore (case-sensitive)
#ignore-words-list = 'sur,nd,te,mytechnicalterm'  # codespell:ignore

# Comma-separated list of words to ignore in URIs and emails (case-sensitive)
uri-ignore-words-list = 'gost'

# skip lines that match the regex
# skips images encoded in jupyter notebooks
ignore-regex = '\s*"image/(png|jpeg)":\s*".*'

# quiet-level 3: suppresses encoding and binary file warnings
quiet-level = 3

# Check file names for typos as well
check-filenames = true

# Check hidden files
check-hidden = true

# print x lines of surrounding context
# before-context = 1
# after-context = 1

# Display a total typo count
count = true

# print a summary
summary = true
